--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -81,19 +81,19 @@ border-color: #4e75ff;
   background-color: #6C8CFF;}
 
   .loader{
-    font-size: 48px;
+    font-size: 16px;
     color: transparent;
     overflow:hidden;
     display: inline-block;
     font-family: Arial, Helvetica, sans-serif;
-    text-shadow:0 0 #FFF, 5em 0 #FFF;
+    text-shadow:0 0 #2E2F42, 5em 0 #2E2F42;
     animation:marquee 2s infinite ease;
   }
   .loader:before {
     content:"Loading images, please wait...";
   }
 
-  @keyframes marquee {to{text-shadow:-5em 0 #FFF, 0 0 #FFF}}
+  @keyframes marquee {to{text-shadow:-5em 0 #2E2F42, 0 0 #2E2F42}}
 
 
   .container {
